updating index.html file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="about-me">
 
         <div class="vl" index="aboutme"></div>
-        <h2 id="aboutme">About Me <img src="/css/VS.jpg" id='varuni-image' style="width:100px;height:100px;"></h2>
+        <h2 id="aboutme">About Me <img src="css/VS.jpg" id='varuni-image' style="width:100px;height:100px;"></h2>
 
         <div class="photo-add-1">
 
